--- a/style.css
+++ b/style.css
@@ -1,23 +1,14 @@
 body {
-  padding-top: 1%;
   background-color: rgb(209, 225, 249);
-
   text-align: center;
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 65px;
 }
 
 p {
   font-size: 40px;
-}
-
-img {
-
-  text-align: center;
-  max-width: none;
-  max-height: none;
 }
 
 ul li {
@@ -26,10 +17,20 @@ ul li {
   text-transform: none;
   display: inline-block;
   text-decoration: none;
-
 }
 
 ul li a {
   text-decoration: none;
   color: inherit;
+}
+
+footer {
+  background-color: pink;
+}
+
+img {
+  border-radius: 100%;
+  text-align: center;
+  max-width: 30%;
+  max-height: 30%;
 }
