--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ body {
   background: -moz-linear-gradient(red, yellow); /* For Firefox 3.6 to 15 */
   background: linear-gradient(rgb(33, 113, 242), rgb(232, 240, 255)); /* Standard syntax */
   text-align: center;
+  background: url("backgroundimage2.jpg");
 }
 
 h1 {
   font-size: 65px;
   font-family: Impact, Cursive, sans-serif;
+}
+h2 {
+  font-size: 30px;
+  font-family: Impact, sans-serif, cursive;
 }
 #firstPara {
   font-size: 27px;
@@ -21,13 +26,6 @@ h1 {
 /*p {
   font-size: 40px;
 }*/
-ol {
-  text-align: center;
-  list-style-position: inside;
-}
-
-
-
 ul li {
   font-size: 2em;
   padding: 0 40px;
@@ -37,6 +35,7 @@ ul li {
 }
 
 ul li a {
+  max-width: 50%;
   text-decoration: none;
   color: inherit;
 }
@@ -53,10 +52,12 @@ img {
  }
 
  .accomplish {
+   max-width: 50%
+   text-align: right;
    font-family: fantasy, sans-serif, Impact;
  }
  #accomplsh {
-   font-size: 40px;
+   font-size: 30px;
    font-family: Impact, sans-serif, cursive;
  }
 
@@ -65,5 +66,12 @@ img {
  }
 
  footer ul {
+   font-size: 10px;
    font-style: italic;
+ }
+ #order {
+
+   text-align: center;
+   list-style-position: inside;
+   font-size: 25px;
  }
